--- a/SardiniaInFood/css/stile.css
+++ b/SardiniaInFood/css/stile.css
@@ -309,8 +309,150 @@ validator a:hover{
 
 
 
+/*rating*/
+/*parte del rating*/
+    
+.ratings {
+            overflow:   visible;
+            padding:    10px;
+            position:   relative;
+            width:      180px;
+            height:     100px;
+        }
+.ratings_stars {
+            background: url('/SardiniaInFood/images/shapes.png') no-repeat;
+            float:      left;
+            height:     28px;
+            padding:    2px;
+            width:      32px;
+        }
+
+.ratings_over {
+            background: url('/SardiniaInFood/images/shapes (1).png') no-repeat;
+        }
+		
+.product{  
+    font: 10px verdana, sans-serif;  
+    margin: 0 auto 40px auto;  
+    width: 180px; 
+	height:100px; 
+}   
+    
+
+/*--------------rapporto qp-------------*/
 
 
 
 
+.rapporto_qualita_prezzo {
+            overflow:   visible;
+            padding:    10px;
+            position:   relative;
+            width:      180px;
+            height:     100px;
+        }
+.rapporto_qualita_prezzo_dollars {
+            background: url('/SardiniaInFood/images/money (1).png') no-repeat;
+            float:      left;
+            height:     28px;
+            padding:    2px;
+            width:      32px;
+        }
 
+.rapporto_qualita_prezzo_over {
+            background: url('/SardiniaInFood/images/money.png') no-repeat;
+        }
+		
+.product2{  
+    font: 10px verdana, sans-serif;  
+    margin: 0 auto 40px auto;  
+    width: 180px; 
+	height:100px; 
+}   
+
+
+/*---------recension -----------*/
+.recensione{
+    width: 60%;
+    border: solid thin black;
+}
+
+/*menu*/
+#uscita, #rec_login{
+    float:right;
+}
+
+
+/*ICONE NEL FORM*/
+/*WORK IN PROGRESS*/
+/*NON VIENE VISUALIZZATO NULLA SU CHROME*/
+
+
+select#tipo_attivita_id {
+    width: 30%;
+    height: 50px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
+select#tipo_attivita_id option[value="-1"]   {  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;}
+
+select#tipo_attivita_id option[value="1"]   { background-image:url("/SardiniaInFood/images/Agriturismo.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="2"]   { background-image:url("/SardiniaInFood/images/American Bar.png"); background-repeat: no-repeat;  padding-left: 100px;padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="3"]   { background-image:url("/SardiniaInFood/images/Bar Caffe.png"); background-repeat: no-repeat; padding-left: 100px;  padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="4"]   { background-image:url("/SardiniaInFood/images/Birreria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="5"]   { background-image:url("/SardiniaInFood/images/Bistrot.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="6"]   { background-image:url("/SardiniaInFood/images/Fast Food.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="7"]   { background-image:url("/SardiniaInFood/images/Gelateria.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="8"]   { background-image:url("/SardiniaInFood/images/Osteria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="9"]   { background-image:url("/SardiniaInFood/images/Pasticceria.png"); background-repeat: no-repeat;  padding-left: 100px;padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="10"]   { background-image:url("/SardiniaInFood/images/Pizzeria.png"); background-repeat: no-repeat; padding-left: 100px;  padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="11"]   { background-image:url("/SardiniaInFood/images/Pub.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="12"]   { background-image:url("/SardiniaInFood/images/Ristorante.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="13"]   { background-image:url("/SardiniaInFood/images/Self Service.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="14"]   { background-image:url("/SardiniaInFood/images/Snak Bar.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="15"]   { background-image:url("/SardiniaInFood/images/Take Away.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="16"]   { background-image:url("/SardiniaInFood/images/Trattoria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="17"]   { background-image:url("/SardiniaInFood/images/Altro.png"); background-repeat: no-repeat; padding-left: 100px;padding-top: 25px; padding-bottom: 10px;  background-size: 40px 40px; }
+
+
+input[type=text], select {
+    width: 30%;
+    height: 25px;
+    padding: 12px 20px;
+    margin-top: 25px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
+input[type=submit] {
+    width: 10%;
+    height: 40px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+
+
+/*-COMMENTI PAGINATI-*/
+.commentipaginati {
+    width: 60%;
+    border: 1px solid red;
+}
