--- a/SardiniaInFood/css/stile.css
+++ b/SardiniaInFood/css/stile.css
@@ -153,7 +153,7 @@ validator a:hover{
     color: #FF0000;
 }
     
-.warning, .error {
+.errore {
     color:#555;
     border-radius:10px;
     font-family:Tahoma,Geneva,Arial,sans-serif;
@@ -162,17 +162,48 @@ validator a:hover{
     margin:10px;
     font-weight:bold;
     text-transform:uppercase;
-}
-.warning {    
-    background:#fff8c4 10px 50%;
-    border:1px solid #f2c779;
-}
-
-.error {
-    background:#ffecec 10px 50%;
+    background:#E57C67 10px 50%;
     border:1px solid #f5aca6;
 }
+
+.successo
+{
+    font-size:30px;
+    color: #FF0000;
+}
     
+.successo {
+    color:#555;
+    border-radius:10px;
+    font-family:Tahoma,Geneva,Arial,sans-serif;
+    font-size:11px;
+    padding:10px 10px 10px 36px;
+    margin:10px;
+    font-weight:bold;
+    text-transform:uppercase;
+    background:#dff2bf 10px 50%;
+    border:1px solid #dff2bf;
+}
+    
+
+.avviso
+{
+    font-size:30px;
+    color: #FEB743;
+}
+    
+.avviso {
+    color:#555;
+    border-radius:10px;
+    font-family:Tahoma,Geneva,Arial,sans-serif;
+    font-size:11px;
+    padding:10px 10px 10px 36px;
+    margin:10px;
+    font-weight:bold;
+    text-transform:uppercase;
+    background:#FEEFB3 10px 50%;
+    border:1px solid #FEEFB3;
+}
 
 
 
@@ -363,6 +394,34 @@ validator a:hover{
             background: url('/SardiniaInFood/images/money.png') no-repeat;
         }
 		
+        
+        
+        
+      
+        
+        div.voto{
+            padding: 5px;
+            width: 5%;
+            margin-left: 45%;
+            border-radius: 5px;
+            background-color: #45A049;
+            
+        }
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
 .product2{  
     font: 10px verdana, sans-serif;  
     margin: 0 auto 40px auto;  
@@ -389,7 +448,18 @@ validator a:hover{
 
 
 select#tipo_attivita_id {
-    width: 30%;
+    width: 90%;
+    height: 50px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+select#tipo_attivita_id_preferiti {
+    width: 90%;
     height: 50px;
     padding: 12px 20px;
     margin: 8px 0;
@@ -400,37 +470,50 @@ select#tipo_attivita_id {
 }
 
 
-select#tipo_attivita_id option[value="-1"]   {  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;}
+select#tipo_attivita_id option[value="-1"]   {  width: 90%;padding-left: 100px; padding-top: 25px; padding-bottom: 10px;}
 
-select#tipo_attivita_id option[value="1"]   { background-image:url("/SardiniaInFood/images/Agriturismo.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="2"]   { background-image:url("/SardiniaInFood/images/American Bar.png"); background-repeat: no-repeat;  padding-left: 100px;padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="3"]   { background-image:url("/SardiniaInFood/images/Bar Caffe.png"); background-repeat: no-repeat; padding-left: 100px;  padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
-select#tipo_attivita_id option[value="4"]   { background-image:url("/SardiniaInFood/images/Birreria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
-select#tipo_attivita_id option[value="5"]   { background-image:url("/SardiniaInFood/images/Bistrot.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="6"]   { background-image:url("/SardiniaInFood/images/Fast Food.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
-select#tipo_attivita_id option[value="7"]   { background-image:url("/SardiniaInFood/images/Gelateria.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="8"]   { background-image:url("/SardiniaInFood/images/Osteria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
-select#tipo_attivita_id option[value="9"]   { background-image:url("/SardiniaInFood/images/Pasticceria.png"); background-repeat: no-repeat;  padding-left: 100px;padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="10"]   { background-image:url("/SardiniaInFood/images/Pizzeria.png"); background-repeat: no-repeat; padding-left: 100px;  padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
-select#tipo_attivita_id option[value="11"]   { background-image:url("/SardiniaInFood/images/Pub.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="12"]   { background-image:url("/SardiniaInFood/images/Ristorante.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="13"]   { background-image:url("/SardiniaInFood/images/Self Service.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="14"]   { background-image:url("/SardiniaInFood/images/Snak Bar.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
-select#tipo_attivita_id option[value="15"]   { background-image:url("/SardiniaInFood/images/Take Away.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
-select#tipo_attivita_id option[value="16"]   { background-image:url("/SardiniaInFood/images/Trattoria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
-select#tipo_attivita_id option[value="17"]   { background-image:url("/SardiniaInFood/images/Altro.png"); background-repeat: no-repeat; padding-left: 100px;padding-top: 25px; padding-bottom: 10px;  background-size: 40px 40px; }
+select#tipo_attivita_id option[value="1"]   { width: 90%; background-image:url("/SardiniaInFood/images/Agriturismo.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="2"]   { width: 90%; background-image:url("/SardiniaInFood/images/American Bar.png"); background-repeat: no-repeat;  padding-left: 100px;padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="3"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Bar Caffe.png"); background-repeat: no-repeat; padding-left: 100px;  padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="4"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Birreria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="5"]   { width: 90%; background-image:url("/SardiniaInFood/images/Bistrot.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="6"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Fast Food.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="7"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Gelateria.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="8"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Osteria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="9"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Pasticceria.png"); background-repeat: no-repeat;  padding-left: 100px;padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="10"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Pizzeria.png"); background-repeat: no-repeat; padding-left: 100px;  padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="11"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Pub.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="12"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Ristorante.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="13"]   { width: 90%; background-image:url("/SardiniaInFood/images/Self Service.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="14"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Snak Bar.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="15"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Take Away.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id option[value="16"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Trattoria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id option[value="17"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Altro.png"); background-repeat: no-repeat; padding-left: 100px;padding-top: 25px; padding-bottom: 10px;  background-size: 40px 40px; }
 
 
-input[type=text], select {
-    width: 30%;
-    height: 25px;
-    padding: 12px 20px;
-    margin-top: 25px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
+
+
+select#tipo_attivita_id_preferiti option[value="-1"]   {  width: 90%;padding-left: 100px; padding-top: 25px; padding-bottom: 10px;}
+
+select#tipo_attivita_id_preferiti option[value="1"]   { width: 90%; background-image:url("/SardiniaInFood/images/Agriturismo.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="2"]   { width: 90%; background-image:url("/SardiniaInFood/images/American Bar.png"); background-repeat: no-repeat;  padding-left: 100px;padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="3"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Bar Caffe.png"); background-repeat: no-repeat; padding-left: 100px;  padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="4"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Birreria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="5"]   { width: 90%; background-image:url("/SardiniaInFood/images/Bistrot.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="6"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Fast Food.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="7"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Gelateria.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="8"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Osteria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="9"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Pasticceria.png"); background-repeat: no-repeat;  padding-left: 100px;padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="10"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Pizzeria.png"); background-repeat: no-repeat; padding-left: 100px;  padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="11"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Pub.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="12"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Ristorante.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="13"]   { width: 90%; background-image:url("/SardiniaInFood/images/Self Service.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="14"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Snak Bar.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="15"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Take Away.png"); background-repeat: no-repeat; padding-left: 100px; padding-top: 25px; padding-bottom: 10px; background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="16"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Trattoria.png"); background-repeat: no-repeat;  padding-left: 100px; padding-top: 25px; padding-bottom: 10px;background-size: 40px 40px; }
+select#tipo_attivita_id_preferiti option[value="17"]   {  width: 90%;background-image:url("/SardiniaInFood/images/Altro.png"); background-repeat: no-repeat; padding-left: 100px;padding-top: 25px; padding-bottom: 10px;  background-size: 40px 40px; }
+
+
 
 
 input[type=submit] {
@@ -451,8 +534,68 @@ input[type=submit]:hover {
 
 
 
+ select {
+    width: 90%;
+    height: 50px;
+    padding: 12px 20px;
+    margin-top: 25px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
 /*-COMMENTI PAGINATI-*/
 .commentipaginati {
     width: 60%;
     border: 1px solid red;
+}
+
+textarea {
+    width: 90%;
+}
+
+
+
+
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
