--- a/SardiniaInFood/css/fogliodistile.css
+++ b/SardiniaInFood/css/fogliodistile.css
@@ -78,6 +78,7 @@ p.center.white {padding: 0px 40px 30px 40px; text-align: center; color: #fff;}
 .preview-card .box-text .box-statistiche .recensioni {width: 388px; height: auto; line-height: 40px; text-indent: 10px; background:  #6666ff; float: right;}
 .preview-card .box-text .box-statistiche .media-voto {margin-top: 20px; width: 388px; height: auto; line-height: 40px; text-indent: 10px; background:  #FF3333; float: left;}
 .preview-card .box-text .box-statistiche .rapporto-qualita-prezzo {margin-top: 20px; width: 388px; height: auto; line-height: 40px; text-indent: 10px; background: #85bb65; float: right;}
+.preview-card .box-text input[type="image"] {margin: 20px; display:block;float: right; cursor:pointer;}
 .preview-card .box-text a.readmore {margin-top: 20px; padding: 10px; width: 120px; height: auto; font-size: 14px; text-align: center; color: #f0f0f0; background: #121212; display:block;float: right; cursor:pointer;}
 .preview-card .box-text a.readmore:hover {background: #cc0000;}   
 .preview-card .box-text .cancella-preferito {margin: 20px; width: auto; float: right; cursor:pointer;}
@@ -91,6 +92,7 @@ p.center.white {padding: 0px 40px 30px 40px; text-align: center; color: #fff;}
 #card .box-contacts h1 {font-size: 24px;}
 #card .box-contacts h2 {margin-top: 30px; font-size: 14px;}  
 #card .box-contacts h4 {font-size: 18px;}
+#card .box-contacts h6 {padding: 15px 0px 0px 0px; width: 100%; font-size: 16px; line-height: 22px; color: black; border-bottom: 1px dotted black;}
 #card .box-contacts p.format {padding: 0;}
 #card .box-services {margin-top: 20px; width: 100%; height: auto; float: left;}
 #card .box-services h3 {padding: 10px 0px; width: 100%; font-size: 24px; color: #39b54a; border-bottom: 4px double #39b54a;}
@@ -111,12 +113,13 @@ p.center.white {padding: 0px 40px 30px 40px; text-align: center; color: #fff;}
 #card .box-reviews .box-gray .review .userplusdate {width: 100%; height: 32px; line-height: 32px; background: url('../images/user.png') no-repeat left top; text-indent: 40px; float: left;} 
 #card .box-reviews .box-gray .review .text {margin: 5px 40px 0px 40px; width: auto; height: auto; float: left;}
 #card .box-reviews .box-gray .write-a-review {margin: 32px 32px 0px 32px; width: 1072px; height: auto; float: left;}
+#card .box-reviews .box-gray input[type="image"] {float: right;} 
 #recensione {width: 100%; height: auto; float: left;}
 #recensione textarea {resize:none; width: 99.4%; height: 50px; font-size: 14px;}
 #recensione input[type="button"] {padding: 10px 0px; border: 3px double #fff; width: 100%; line-height: 40px; text-align: center; background: #3A5FCD; display: inline-block; font-size:16px; color: #fff; cursor:pointer;}
 #recensione input[type="button"]:hover {background: #4876FF; color:#f9f9f9;}
-/*>>>>>>>>>>>*/#card .box-contacts h6 {padding: 15px 0px 0px 0px; width: 100%; font-size: 16px; line-height: 22px; color: black; border-bottom: 1px dotted #666;}
-/*>>>>>>>>>>>*/#card .box-reviews .box-gray input[type="image"] {float: right;} 
+
+
 
 /* PREFERITI
 ========================================================================== */ 
